uploaded and working perfectly

--- a/css/style.css
+++ b/css/style.css
@@ -479,6 +479,7 @@ header h1 a img {
     display: block;
     position: relative;
     margin-bottom: 30px;
+    height: 197px;
 }
 
 .gal_item img {
